- ADDED: Dev Icon in client - ADDED: Exception handling and proper error message on failed connects (Netty) - CHANGED: How message objects are handled